# wildTrack

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  Makefile  README.md  compose.infra.yml
backend/: alembic.ini  pyproject.toml
backend/app/: dependencies.py  lifespan.py  main.py
backend/infrastructure/: gbif_client.py  health.py  minio_client.py  mongodb.py  mqtt.py  postgres.py
backend/migrations/: env.py
backend/migrations/versions/: 0001_empty_baseline.py  0002_create_users_table.py  0003_require_user_document.py  0004_create_zones_table.py  0005_drop_duplicate_geom_index.py  0006_create_stations_table.py  0007_create_user_stations_table.py  0008_create_devices_table.py  0009_create_animals_table.py  0010_create_foods_table.py  0011_create_station_foods_table.py  0012_add_zone_color.py
backend/modules/alerts/: exceptions.py  repository.py  router.py  schemas.py  service.py
backend/modules/animals/: exceptions.py  models.py  repository.py  router.py  schemas.py  service.py
backend/modules/auth/: exceptions.py  router.py  schemas.py  service.py
backend/modules/devices/: exceptions.py  models.py  repository.py  router.py  schemas.py  service.py
backend/modules/foods/: exceptions.py  models.py  repository.py  router.py  schemas.py  service.py
backend/modules/geoportal/: aggregation.py  repository.py  router.py  schemas.py  service.py
backend/scripts/: seed_admin.py  test_mqtt_publish.py
backend/shared/: base_exception.py  config.py  enums.py  pagination.py  security.py  uuid7.py
backend/tests/: conftest.py  test_health.py
(+210 files in other folders)
