[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "wildtrack-backend"
version = "0.1.0"
description = "WildTrack IoT wildlife monitoring platform — backend"
requires-python = ">=3.12,<3.13"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",
    "geoalchemy2>=0.15.0",
    "motor>=3.6.0",
    "minio>=7.2.0",
    "pydantic-settings>=2.6.0",
    "python-dotenv>=1.0.0",
    "bcrypt>=4.0.0",
    "python-jose[cryptography]>=3.3.0",
    "uuid7>=0.1.0",
    "email-validator>=2.1.0",
    "aiomqtt>=2.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.0",
    "pytest-cov>=6.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["app", "shared", "infrastructure", "modules", "scripts"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"
